# easy

./: .gitignore  README.md  noxfile.py  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  frontend-pages.yml
apps/backend/: README.md  pyproject.toml
apps/backend/src/backend/: __init__.py  config.py  main.py
apps/backend/src/backend/plugins/: __init__.py  registry.py  system.py
apps/backend/src/backend/routers/: health.py
apps/backend/tests/: test_health.py
apps/frontend/: README.md  eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
docs/: architecture.md
tools/sandbox/: README.md
