[tool.poetry]
name = "easy-backend"
version = "0.1.0"
description = "Modular FastAPI backend for the Easy platform"
authors = ["Horizon Research UG <dev@horizon-research.example>"]
packages = [{ include = "backend", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.poetry.scripts]
backend-api = "backend.main:run"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
packages = ["backend"]
strict = true
